--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
       "start:dev": "ts-node-dev './src/index.ts'",
       "lint": "eslint ./src ./test --ext .ts",
       "lint:fix": "eslint ./src ./test --ext .ts --fix",
-      "test": "echo \"Error: no test specified\" && exit 1"
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "test:functional": "jest --projects ./test --runInBand"
    },
    "repository": {
       "type": "git",
@@ -26,11 +27,16 @@
    },
    "homepage": "https://github.com/nathandg/node-ts-api#readme",
    "devDependencies": {
+      "@types/jest": "^29.4.0",
       "@types/module-alias": "^2.0.1",
       "@types/node": "^18.11.18",
+      "@types/supertest": "^2.0.12",
       "@typescript-eslint/eslint-plugin": "^5.50.0",
       "@typescript-eslint/parser": "^5.50.0",
       "eslint": "^8.33.0",
+      "jest": "^29.4.1",
+      "supertest": "^6.3.3",
+      "ts-jest": "^29.0.5",
       "ts-node-dev": "^2.0.0",
       "typescript": "^4.9.5"
    },
