--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
       "style:check": "prettier --check ./src/**/*.ts ./test/**/*.ts",
       "style:fix": "prettier --write ./src/**/*.ts ./test/**/*.ts",
       "test": "echo \"Error: no test specified\" && exit 1",
-      "test:functional": "jest --projects ./test --runInBand"
+      "test:functional": "jest --projects ./test --runInBand",
+      "test:unit": "jest"
    },
    "repository": {
       "type": "git",
@@ -29,6 +30,7 @@
    },
    "homepage": "https://github.com/nathandg/node-ts-api#readme",
    "devDependencies": {
+      "@types/axios": "^0.14.0",
       "@types/express": "^4.17.17",
       "@types/jest": "^29.4.0",
       "@types/module-alias": "^2.0.1",
@@ -46,6 +48,7 @@
    },
    "dependencies": {
       "@overnightjs/core": "^1.7.6",
+      "axios": "^1.3.2",
       "body-parser": "^1.20.1",
       "express": "^4.18.2",
       "module-alias": "^2.2.2"
